--- a/divar-First-index/index.html
+++ b/divar-First-index/index.html
@@ -6,15 +6,16 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
+        <!-- CSS only -->
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+        crossorigin="anonymous"
+      />
     <link rel="stylesheet" href="./CSS/main.css" />
     <link rel="stylesheet" href="./CSS/style.css" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -74,17 +75,17 @@
             <div class="text-end mt-3 w-100">
               <h1 class="fs-5">شهرهای پر بازدید</h1>
               <div class="citys">
-                <div href="" class="text-muted fs-cs-p row text-center">
-                  <a href="" class="text-muted col-2 m-2 p-3">کرج</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">تهران</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">قم</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">یزد</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">طالقان</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">شمال</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">گیلان</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">اصفحان</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">لرستان</a>
-                  <a href="" class="text-muted col-2 m-2 p-3">خرم آباد</a>
+                <div href="" class="text-muted row text-center fs-cs-p ">
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">کرج</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">تهران</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">قم</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">یزد</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">طالقان</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">شمال</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">گیلان</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">اصفحان</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">لرستان</a>
+                  <a href="" class="text-muted col-2 m-2 p-3 hover-black ">خرم آباد</a>
                 </div>
               </div>
             </div>
@@ -115,16 +116,16 @@
             <div
               class="fs-5 icons w-100 d-flex justify-content-center align-center"
             >
-              <a class="m-3 text-muted" href=""
+              <a class="m-3 text-muted hover-black" href=""
                 ><i class="bi bi-twitter"></i>
               </a>
-              <a class="m-3 text-muted" href=""
+              <a class="m-3 text-muted hover-black" href=""
                 ><i class="bi bi-instagram"></i>
               </a>
-              <a class="m-3 text-muted" href=""
+              <a class="m-3 text-muted hover-black" href=""
                 ><i class="bi bi-linkedin"></i>
               </a>
-              <a class="m-3 text-muted" href=""><i class="bi bi-github"></i></a>
+              <a class="m-3 text-muted hover-black" href=""><i class="bi bi-github"></i></a>
             </div>
           </div>
           <!-- footer END  -->
