--- a/divar-First-index/index.html
+++ b/divar-First-index/index.html
@@ -39,11 +39,11 @@
             <div
               class="mt-3 pb-2  border-bottom border-1 d-flex flex-row-reverse justify-content-around w-100"
             >
-              <a class="text-muted" href="">ثبت آگهی</a>
-              <a class="text-muted" href="">درباره دیوار</a>
-              <a class="text-muted" href="">دریافت برنامه</a>
-              <a class="text-muted" href="">بلاگ</a>
-              <a class="text-muted" href="">پشتیبانی</a>
+              <a class="text-muted hover-black" href="">ثبت آگهی</a>
+              <a class="text-muted hover-black" href="">درباره دیوار</a>
+              <a class="text-muted hover-black" href="">دریافت برنامه</a>
+              <a class="text-muted hover-black" href="">بلاگ</a>
+              <a class="text-muted hover-black" href="">پشتیبانی</a>
             
             </div>
             <!-- END Header  -->
