Added focus in search box

--- a/divar-First-index/index.html
+++ b/divar-First-index/index.html
@@ -61,7 +61,7 @@
                   <div class="form-group position-relative pt-1">
                     <input
                       type="text"
-                      class="form-control text-end pe-5"
+                      class="form-control text-end pe-5 input-focus"
                       placeholder="جستجوی شهر"
                     />
                     <i
