--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -36,7 +36,7 @@
   <i class="bi bi-search"></i> -->
 
     <!-- start navbar -->
-    <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0">
+    <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
       <div class="row">    
           <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse">
         <!-- brand logo -->
@@ -83,14 +83,14 @@
                 <input
                   aria-describedby="basic-addon1"
                   placeholder="جستجو در آگهی ها"
-                  class="form-control border"
+                  class="form-control border text-start"
                   name=""
                   type="text"
                   id=""
                 />
                 <button class="btn-group bg-white border-0">
                   <i
-                  class="text-muted bi bi-search input-group-text  border-0"
+                  class="text-muted bi bi-search input-group-text border-0 bg-white p-2"
                   id=""
                 ></i>
                 </button>
