edit main index

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -139,25 +139,10 @@
   </div>
   <!-- END navbar -->
 
-  <!-- START MAIN-SIDEBAR -->
 
-  <div class="container-fluid mt-5" dir="rtl">
-    <div class="row">
-
-      <!-- START SIDEBAR -->
-
-      <div class="col-sm-4 mt-5">
-        <div class="d-flex flex-column">
-          <h6>دسته ها</h6>
-          
-        </div>
-      </div>
-
-      <!-- END SIDEBAR -->
-
+  <!-- start MAIN CARD -->
     <div class="container mt-5 pt-5">
       <div class="row">
-
         <!-- card start -->
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
@@ -204,20 +189,11 @@
             </div>
           </div>
         </div>
-
-
         <!-- card start -->
-
       </div>
     </div>
+  <!-- start MAIN CARD -->
 
-      <!-- START MAIN -->
-      <!-- END MAIN -->
-
-    </div>
-  </div>
-
-  <!-- END MAIN-SIDEBAR -->
 
 
 
