--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -151,14 +151,15 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted p-1">در حد نو</span>
+              <span class="text-muted fs-10">در حد نو</span>
               <br>
-              <span class="text-muted p-1">850000تومان</span>
+              <span class="text-muted fs-10">850000تومان</span>
               <br>
-              <span class="text-muted p-1">لحاظی پیش درکرج</span>
+              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
+        
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
             <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
@@ -166,14 +167,15 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted p-1">در حد نو</span>
+              <span class="text-muted fs-10">در حد نو</span>
               <br>
-              <span class="text-muted p-1">850000تومان</span>
+              <span class="text-muted fs-10">850000تومان</span>
               <br>
-              <span class="text-muted p-1">لحاظی پیش درکرج</span>
+              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
+
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
             <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
@@ -181,11 +183,11 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted p-1">در حد نو</span>
+              <span class="text-muted fs-10">در حد نو</span>
               <br>
-              <span class="text-muted p-1">850000تومان</span>
+              <span class="text-muted fs-10">850000تومان</span>
               <br>
-              <span class="text-muted p-1">لحاظی پیش درکرج</span>
+              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
