--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -139,10 +139,20 @@
   </div>
   <!-- END navbar -->
 
-  
+  <div class="container mt-5 pt-5">
+    <div class="row">
+
+      <!-- START SIDEBAR -->
+      <div class="col-sm-4">
+        <h6>دسته‌ها</h6>
+        <ul>
+          <li></li>
+        </ul>
+      </div>
+      <!-- END SIDEBAR -->
 
 
-  <!-- start MAIN CARD -->
+        <!-- start MAIN CARD -->
     <div class="container mt-5 pt-5">
       <div class="row">
         <!-- card start -->
@@ -153,15 +163,14 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted fs-10">در حد نو</span>
+              <span class="text-muted p-1">در حد نو</span>
               <br>
-              <span class="text-muted fs-10">850000تومان</span>
+              <span class="text-muted p-1">850000تومان</span>
               <br>
-              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
+              <span class="text-muted p-1">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
-        
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
             <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
@@ -169,15 +178,14 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted fs-10">در حد نو</span>
+              <span class="text-muted p-1">در حد نو</span>
               <br>
-              <span class="text-muted fs-10">850000تومان</span>
+              <span class="text-muted p-1">850000تومان</span>
               <br>
-              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
+              <span class="text-muted p-1">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
-
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
             <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
@@ -185,11 +193,11 @@
           <div class="text-start d-flex flex-column justify-content-around">
             <h4 class="fs-5 p-1">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
             <div>
-              <span class="text-muted fs-10">در حد نو</span>
+              <span class="text-muted p-1">در حد نو</span>
               <br>
-              <span class="text-muted fs-10">850000تومان</span>
+              <span class="text-muted p-1">850000تومان</span>
               <br>
-              <span class="text-muted fs-10">لحاظی پیش درکرج</span>
+              <span class="text-muted p-1">لحاظی پیش درکرج</span>
             </div>
           </div>
         </div>
@@ -197,6 +205,12 @@
       </div>
     </div>
   <!-- start MAIN CARD -->
+
+    </div>
+  </div>
+
+
+
 
 
 
