--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -31,10 +31,10 @@
   <i class="bi bi-geo-alt"></i>  
   <i class="bi bi-search"></i> -->
 
-    <!-- start navbar -->
-    <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
-      <div class="row">    
-          <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse">
+  <!-- start navbar -->
+  <div class="container-fluid shadow-sm fixed-top bg-white pb-sm-3 pb-lg-0 ">
+    <div class="row">
+      <nav class="mx-5 navbar text-center navbar-expand-lg flex-row-reverse">
         <!-- brand logo -->
         <a href="" class="d-none d-lg-block navbar-brand ps-5 pe-3 border-end">
           <img style="width: 50px"
@@ -70,19 +70,10 @@
             <!-- form search  -->
             <form action="" class="bg form-inline mx-2">
               <div class="input-group border rounded">
-                <input
-                  aria-describedby="basic-addon1"
-                  placeholder="جستجو در آگهی ها"
-                  class="form-control border text-start"
-                  name=""
-                  type="text"
-                  id=""
-                />
+                <input aria-describedby="basic-addon1" placeholder="جستجو در آگهی ها"
+                  class="form-control border text-start" name="" type="text" id="" />
                 <button class="btn-group bg-white border-0">
-                  <i
-                  class="text-muted bi bi-search input-group-text border-0 bg-white p-2"
-                  id=""
-                ></i>
+                  <i class="text-muted bi bi-search input-group-text border-0 bg-white p-2" id=""></i>
                 </button>
 
               </div>
@@ -139,7 +130,7 @@
   </div>
   <!-- END navbar -->
 
-  <div class="container mt-5 pt-5">
+  <div class="container-fluid mt-5 pt-5" dir="rtl">
     <div class="row">
 
       <!-- START SIDEBAR -->
@@ -151,8 +142,8 @@
       </div>
       <!-- END SIDEBAR -->
 
-
-        <!-- start MAIN CARD -->
+      <!-- start MAIN CARD -->
+      <div class="col-sm-8">
         <!-- card start -->
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
@@ -201,8 +192,7 @@
         </div>
         <!-- card start -->
       </div>
-    </div>
-  <!-- start MAIN CARD -->
+      <!-- start MAIN CARD -->
 
     </div>
   </div>
