--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -134,7 +134,7 @@
     <div class="row">
 
       <!-- START SIDEBAR -->
-      <div class="col-sm-4">
+      <div class="col-md-4">
         <h6>دسته‌ها</h6>
         <ul>
           <li></li>
@@ -143,7 +143,7 @@
       <!-- END SIDEBAR -->
 
       <!-- start MAIN CARD -->
-      <div class="col-sm-8">
+      <div class="col-md-8">
         <!-- card start -->
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
