--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://kit.fontawesome.com/9acc533df2.js" crossorigin="anonymous"></script>
   <!-- icon -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- custom css -->
   <link rel="stylesheet" href="./Main.css" />
   <link rel="stylesheet" href="./CSS/style.css" />
@@ -130,20 +130,125 @@
   </div>
   <!-- END navbar -->
 
-  <div class="container-fluid mt-5 pt-5" dir="rtl">
+  <div class="container-fluid mt-5 pt-4" dir="rtl">
     <div class="row">
 
       <!-- START SIDEBAR -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <h6>دسته‌ها</h6>
-        <ul>
-          <li></li>
+        <ul class="list-group border-bottom pb-3">
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bold hover-to-light" href="#">
+              <i class="bi bi-building"></i> &nbsp;&nbsp;
+              املاک
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
+              وسایل نقلیه
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-phone"></i> &nbsp;&nbsp;
+              کالای دیجیتال
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-lamp"></i> &nbsp;&nbsp;
+              خانه و آشپزخانه
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-brush"></i> &nbsp;&nbsp;
+              خدمات
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-watch"></i> &nbsp;&nbsp;
+              وسایل شخصی
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
+              سرگرمی و فراغت
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-people"></i> &nbsp;&nbsp;
+              اجتماعی
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
+              تجهیزات و صنعتی
+            </a>
+          </li>
+          <li class="list-group-item border-0">
+            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+              <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
+              استخدام و کاریابی
+            </a>
+          </li>
         </ul>
+        <div class="border-bottom d-flex flex-column">
+          <div class="d-flex flex-row">
+            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
+            </a>
+          </div>
+        </div>
+        <div class="border-bottom d-flex flex-column">
+          <div class="d-flex flex-row">
+            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
+            </a>
+          </div>
+        </div>
+        <div class="border-bottom d-flex flex-column">
+          <div class="d-flex flex-row">
+            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
+            </a>
+          </div>
+        </div>
+        <div class="d-flex flex-row justify-content-center">
+          <div class="row">
+            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">درباره دیوار</a>
+            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">دریافت برنامه</a>
+            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">بلاگ دیوار</a>
+            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">پشتیبانی</a>
+          </div>
+        </div>
+        <div class="d-flex flex-row justify-content-center mt-4">
+          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
+          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
+          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
+          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
+        </div>
+        <div class="d-flex flex-row justify-content-center mt-5">
+          <a class="w-auto text-center" href="#">
+            <img class="pe-3" width="80px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnI_nD98BLjMzlF0Ppsctz-8qw2MAxHNOpY4Dj6kWaDOoavUSpm4d0IERdlhbjTxKvPA0&usqp=CAU" alt="">
+          </a>
+          <a class="w-auto text-center" href="#">
+            <img class="pe-3" width="80px" src="https://s100.divarcdn.com/statics/2022/08/ecunion-logo.3ed4f870.png" alt="">
+          </a>
+          <a class="w-auto text-center" href="#">
+            <img class="pe-3" width="80px" src="https://paydarweb.net/uploads/pages/1d2ab0.png" alt="">
+          </a>
+        </div>
       </div>
       <!-- END SIDEBAR -->
 
       <!-- start MAIN CARD -->
-      <div class="col-md-8">
+      <div class="col-md-9">
         <!-- card start -->
         <div class="col-md-6 col-lg-4 bg-light d-flex justify-content-between shadow-sm rounded m-1 border border-1">
           <div>
