--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://kit.fontawesome.com/9acc533df2.js" crossorigin="anonymous"></script>
   <!-- icon -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
   <!-- custom css -->
   <link rel="stylesheet" href="./CSS/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="./CSS/style.css" />
@@ -127,6 +127,46 @@
   </div>
   <!-- END navbar -->
 
+
+
+  <div class="container mt-5 pt-3 px-3">
+    <div class="bredcrumb-container " dir="rtl">
+        <ol class="breadcrumb  rounded px-1 fs-8">
+            <li class="breadcrumb-item">خانه</li>
+            <li class="breadcrumb-item">مشتری</li>
+            <li class="breadcrumb-item">ماشین</li>
+            <li class="breadcrumb-item active">تایتل پیج اینجا</li>
+        </ol>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-8">lorem 8</div>
+            <div class="col-4" dir="rtl">
+                <div>
+
+            <div class="container-cs  d-flex flex-direction-column mt-4">
+                <div class="headers-body text-right">
+                    <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
+                    <h5 class="text-muted fs-8"><span>دو ساعت پیش در کرج</span> <span>مشکین دشت</span> <span>مهارت فنی و خدمات</span></h5>
+                    <div class="d-flex">
+                        <div class="w-auto bg-info ">
+                            <a href="" class="btn btn-brand btn-cs px-3 text-white">اطلاعات تماس</a>
+                            <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
+                        </div>
+                        <div class="w-auto">
+                            <i class="fa-thin fa-bookmark"></i>
+                            <i class="fa-light fa-share-nodes"></i>
+                            <i class="bi bi-share-fill"></i>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </div>
+    </div>
+ </div>
 
 
 
