--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -132,7 +132,7 @@
   <div class="row">
 
 <!-- START SIDEBAR -->
-      <div class="col-md-3">
+      <aside class="col-md-3 sidebar">
         <h6>دسته‌ها</h6>
         <ul class="list-group border-bottom pb-3">
           <li class="list-group-item border-0">
@@ -242,7 +242,7 @@
             <img class="pe-3" width="80px" src="https://paydarweb.net/uploads/pages/1d2ab0.png" alt="">
           </a>
         </div>
-      </div>
+      </aside>
 <!-- END SIDEBAR -->
 
 
