--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -136,61 +136,61 @@
         <h6>دسته‌ها</h6>
         <ul class="list-group border-bottom pb-3">
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bold hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-building"></i> &nbsp;&nbsp;
               املاک
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
               وسایل نقلیه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-phone"></i> &nbsp;&nbsp;
               کالای دیجیتال
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-lamp"></i> &nbsp;&nbsp;
               خانه و آشپزخانه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-brush"></i> &nbsp;&nbsp;
               خدمات
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-watch"></i> &nbsp;&nbsp;
               وسایل شخصی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
               سرگرمی و فراغت
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-people"></i> &nbsp;&nbsp;
               اجتماعی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
               تجهیزات و صنعتی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row fw-bolder hover-to-light" href="#">
+            <a class="d-flex flex-row text-muted textLight-hover" href="#">
               <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
               استخدام و کاریابی
             </a>
@@ -198,38 +198,38 @@
         </ul>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fw-bolder w-100 p-3 hover-to-light" href="#">
+            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
         </div>
         <div class="d-flex flex-row justify-content-center">
           <div class="row">
-            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">درباره دیوار</a>
-            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">دریافت برنامه</a>
-            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">بلاگ دیوار</a>
-            <a class="col-md-4 p-2 pe-3 hover-to-light" href="#">پشتیبانی</a>
+            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">درباره دیوار</a>
+            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">دریافت برنامه</a>
+            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">بلاگ دیوار</a>
+            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">پشتیبانی</a>
           </div>
         </div>
         <div class="d-flex flex-row justify-content-center mt-4">
-          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
-          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
-          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
-          <a class="col-md-2 hover-to-light text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
+          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
+          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
+          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
+          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
         </div>
         <div class="d-flex flex-row justify-content-center mt-5">
           <a class="w-auto text-center" href="#">
@@ -243,6 +243,7 @@
           </a>
         </div>
       </aside>
+      
 <!-- END SIDEBAR -->
 
 
