--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -148,16 +148,15 @@
                 <div class="headers-body text-right">
                     <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
                     <h5 class="text-muted fs-8"><span>دو ساعت پیش در کرج</span> <span>مشکین دشت</span> <span>مهارت فنی و خدمات</span></h5>
-                    <div class="d-flex">
-                        <div class="w-auto bg-info ">
+                    
+                    <div class="d-flex  justify-content-between align-items-center">
+                        <div class="w-auto ">
                             <a href="" class="btn btn-brand btn-cs px-3 text-white">اطلاعات تماس</a>
                             <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
                         </div>
-                        <div class="w-auto">
-                            <i class="fa-thin fa-bookmark"></i>
-                            <i class="fa-light fa-share-nodes"></i>
-                            <i class="bi bi-share-fill"></i>
-
+                        <div class="w-auto pe-2">
+                            <a href="#" class="icon-save-share pe-2"><i class="fs-10 fa-solid fa-bookmark"></i></a>
+                            <a href="#" class="icon-save-share pe-2"><i class="fs-10 bi bi-share-fill"></i></a>
                         </div>
                     </div>
                 </div>
