fix index responsive

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -249,7 +249,7 @@
 
 <!-- start MAIN CARD -->
 <div class="col-md-12 col-lg-9">        
-    <div class="row bg-danger" dir="ltr">
+    <div class="row" dir="ltr">
   <!-- card start -->
         
 <div class="col-md-6 col-lg-6 p-2 ">
