--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -149,16 +149,47 @@
                     <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
                     <h5 class="text-muted fs-8"><span>دو ساعت پیش در کرج</span> <span>مشکین دشت</span> <span>مهارت فنی و خدمات</span></h5>
                     
-                    <div class="d-flex  justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-center my-4">
                         <div class="w-auto ">
-                            <a href="" class="btn btn-brand btn-cs px-3 text-white">اطلاعات تماس</a>
+                            <a href="" class="btn btn-brand btn-cs px-3 text-white text-brand-hover">اطلاعات تماس</a>
                             <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
                         </div>
                         <div class="w-auto pe-2">
-                            <a href="#" class="icon-save-share pe-2"><i class="fs-10 fa-solid fa-bookmark"></i></a>
-                            <a href="#" class="icon-save-share pe-2"><i class="fs-10 bi bi-share-fill"></i></a>
+                            <a href="#" class="icon-save-share p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
+                            <a href="#" class="icon-save-share p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
                         </div>
                     </div>
+                    <div class="customer-info fs-info">
+                      <div class="d-flex justify-content-between border-bottom  p-2">
+                        <span class="text-muted">وضعیت</span>
+                        <span>نو</span>
+                      </div>
+                      <div class="d-flex justify-content-between border-bottom  p-2">
+                        <span class="text-muted">قیمت</span>
+                        <span>3760000 تومان</span>
+                      </div>
+                      <div class="d-flex justify-content-between border-bottom  p-2">
+                        <span class="text-muted">آخرین به‌روزرسانی آگهی</span>
+                        <span>یه ربع پیش</span>
+                      </div>
+                    </div>
+                    <div class="customer-caption mt-4">
+                      <span class="h5"> توضیحات</span>
+                      <br>
+                      <p class="customer-info-product fs-8 pt-3">
+                           قیمت پایین نشانه کیفیت بالا نیست،به قیمت خرید کنید پخش درب ضد سرقت ساخت با ابعاد سفارشی رنگ و طرح سفارشی  
+                           درب ورودی فلزی  
+                           درب چوبی  
+                           رویه فلز ایرانی  
+                           رویه فلز ترک  
+                           رویه راش و گردو و بلوط ...
+                           جهت اطلاعات بیشتر با کارشناسان فروش تماس بگیرید  
+                           ارسال به سراسر کشور  
+                           آدرس کارخانه و انبار مرکزی    
+                           کرج جاده قزلحصار بعد از کوچه میثم ۳/۲نرسیده به نمایندگی ایرانخودرو درب ضد سرقت آرکا  
+                      </p>
+                    </div>
+
                 </div>
             </div>
 
