--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -50,7 +50,7 @@
             </li>
             <!-- drop down menu -->
             <li class="rounded nav-item mx-2 dropdown">
-              <a href="" data-bs-toggle="dropdown" class="text-muted nav-link dropdown-toggle">
+              <a href="" data-bs-toggle="dropdown" class="text-muted fs-8 nav-link dropdown-toggle">
                 دسته ها
               </a>
               <div class="dropdown-menu">
@@ -71,7 +71,7 @@
                 <input aria-describedby="basic-addon1" placeholder="جستجو در آگهی ها"
                   class="form-control border text-start" name="" type="text" id="" />
                 <button class="btn-group bg-white border-0">
-                  <i class="text-muted bi bi-search input-group-text border-0 bg-white p-2" id=""></i>
+                  <i class="text-muted fs-8 bi bi-search input-group-text border-0 bg-white p-2" id=""></i>
                 </button>
 
               </div>
@@ -136,61 +136,61 @@
         <h6>دسته‌ها</h6>
         <ul class="list-group border-bottom pb-3">
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-building"></i> &nbsp;&nbsp;
               املاک
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
               وسایل نقلیه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-phone"></i> &nbsp;&nbsp;
               کالای دیجیتال
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-lamp"></i> &nbsp;&nbsp;
               خانه و آشپزخانه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-brush"></i> &nbsp;&nbsp;
               خدمات
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-watch"></i> &nbsp;&nbsp;
               وسایل شخصی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
               سرگرمی و فراغت
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-people"></i> &nbsp;&nbsp;
               اجتماعی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
               تجهیزات و صنعتی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
               <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
               استخدام و کاریابی
             </a>
@@ -198,21 +198,21 @@
         </ul>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted text-muted w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
@@ -261,11 +261,11 @@
         <div class="text-start d-flex flex-column justify-content-around">
           <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
-            <span class="text-muted fs-10">در حد نو</span>
+            <span class="text-muted fs-8 fs-10">در حد نو</span>
             <br>
-            <span class="text-muted fs-10">850000تومان</span>
+            <span class="text-muted fs-8 fs-10">850000تومان</span>
             <br>
-            <span class="text-muted fs-10">لحاظی پیش درکرج</span>
+            <span class="text-muted fs-8 fs-10">لحاظی پیش درکرج</span>
           </div>
         </div>
       </a>
@@ -281,11 +281,11 @@
         <div class="text-start d-flex flex-column justify-content-around">
           <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
-            <span class="text-muted fs-10">در حد نو</span>
+            <span class="text-muted fs-8 fs-10">در حد نو</span>
             <br>
-            <span class="text-muted fs-10">850000تومان</span>
+            <span class="text-muted fs-8 fs-10">850000تومان</span>
             <br>
-            <span class="text-muted fs-10">لحاظی پیش درکرج</span>
+            <span class="text-muted fs-8 fs-10">لحاظی پیش درکرج</span>
           </div>
         </div>
       </a>
