add category tag in customer page

--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -155,8 +155,8 @@
                             <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
                         </div>
                         <div class="w-auto pe-2">
-                            <a href="#" class="icon-save-share p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
-                            <a href="#" class="icon-save-share p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
+                            <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
+                            <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
                         </div>
                     </div>
                     <div class="customer-info fs-info">
@@ -176,7 +176,7 @@
                     <div class="customer-caption mt-4">
                       <span class="h5"> توضیحات</span>
                       <br>
-                      <p class="customer-info-product fs-8 pt-3">
+                      <p class="customer-info-product fs-8 pt-3  border-bottom pb-5">
                            قیمت پایین نشانه کیفیت بالا نیست،به قیمت خرید کنید پخش درب ضد سرقت ساخت با ابعاد سفارشی رنگ و طرح سفارشی  
                            درب ورودی فلزی  
                            درب چوبی  
@@ -188,6 +188,12 @@
                            آدرس کارخانه و انبار مرکزی    
                            کرج جاده قزلحصار بعد از کوچه میثم ۳/۲نرسیده به نمایندگی ایرانخودرو درب ضد سرقت آرکا  
                       </p>
+                    </div>
+
+                    <div class="category-about-product mt-4 w-100">
+                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">مصالح ساختمای</a>
+                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">خانه و سلامت</a>
+                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">موتور و خودرو</a>
                     </div>
 
                 </div>
