--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -231,7 +231,7 @@
             <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
             <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
           </div>
-          <div class="d-flex flex-row justify-content-center mt-5">
+          <div class="d-flex flex-row justify-content-center mt-4">
             <a class="w-auto text-center" href="#">
               <img class="pe-3" width="80px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnI_nD98BLjMzlF0Ppsctz-8qw2MAxHNOpY4Dj6kWaDOoavUSpm4d0IERdlhbjTxKvPA0&usqp=CAU" alt="">
             </a>
@@ -252,8 +252,8 @@
 
 
 <!-- start MAIN CARD -->
-<div class="d-flex justify-content-end">
-  <div class="col-md-12 col-lg-9">
+
+  <div class="col-md-12 col-lg-9 ms-auto">
     <div class="row" dir="ltr">
   <!-- card start -->
         
@@ -381,7 +381,6 @@
      
 <!-- card start -->
     </div>
-</div>
 </div>
 <!-- start MAIN CARD -->
 
