Done Left side of Customer page

--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -131,78 +131,86 @@
 
   <div class="container mt-5 pt-3 px-3">
     <div class="bredcrumb-container " dir="rtl">
-        <ol class="breadcrumb  rounded px-1 fs-8">
-            <li class="breadcrumb-item">خانه</li>
-            <li class="breadcrumb-item">مشتری</li>
-            <li class="breadcrumb-item">ماشین</li>
-            <li class="breadcrumb-item active">تایتل پیج اینجا</li>
-        </ol>
+      <ol class="breadcrumb  rounded px-1 fs-8">
+        <li class="breadcrumb-item">خانه</li>
+        <li class="breadcrumb-item">مشتری</li>
+        <li class="breadcrumb-item">ماشین</li>
+        <li class="breadcrumb-item active">تایتل پیج اینجا</li>
+      </ol>
     </div>
 
     <div class="row mt-3">
-        <div class="col-8">lorem 8</div>
-            <div class="col-4" dir="rtl">
-                <div>
+      <div class="col-8">lorem 8</div>
+      <div class="col-4" dir="rtl">
+        <div>
 
-            <div class="container-cs  d-flex flex-direction-column mt-4">
-                <div class="headers-body text-right">
-                    <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
-                    <h5 class="text-muted fs-8"><span>دو ساعت پیش در کرج</span> <span>مشکین دشت</span> <span>مهارت فنی و خدمات</span></h5>
-                    
-                    <div class="d-flex justify-content-between align-items-center my-4">
-                        <div class="w-auto ">
-                            <a href="" class="btn btn-brand btn-cs px-3 text-white text-brand-hover">اطلاعات تماس</a>
-                            <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
-                        </div>
-                        <div class="w-auto pe-2">
-                            <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
-                            <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
-                        </div>
-                    </div>
-                    <div class="customer-info fs-info">
-                      <div class="d-flex justify-content-between border-bottom  p-2">
-                        <span class="text-muted">وضعیت</span>
-                        <span>نو</span>
-                      </div>
-                      <div class="d-flex justify-content-between border-bottom  p-2">
-                        <span class="text-muted">قیمت</span>
-                        <span>3760000 تومان</span>
-                      </div>
-                      <div class="d-flex justify-content-between border-bottom  p-2">
-                        <span class="text-muted">آخرین به‌روزرسانی آگهی</span>
-                        <span>یه ربع پیش</span>
-                      </div>
-                    </div>
-                    <div class="customer-caption mt-4">
-                      <span class="h5"> توضیحات</span>
-                      <br>
-                      <p class="customer-info-product fs-8 pt-3  border-bottom pb-5">
-                           قیمت پایین نشانه کیفیت بالا نیست،به قیمت خرید کنید پخش درب ضد سرقت ساخت با ابعاد سفارشی رنگ و طرح سفارشی  
-                           درب ورودی فلزی  
-                           درب چوبی  
-                           رویه فلز ایرانی  
-                           رویه فلز ترک  
-                           رویه راش و گردو و بلوط ...
-                           جهت اطلاعات بیشتر با کارشناسان فروش تماس بگیرید  
-                           ارسال به سراسر کشور  
-                           آدرس کارخانه و انبار مرکزی    
-                           کرج جاده قزلحصار بعد از کوچه میثم ۳/۲نرسیده به نمایندگی ایرانخودرو درب ضد سرقت آرکا  
-                      </p>
-                    </div>
+          <div class="container-cs  d-flex flex-direction-column mt-4">
+            <div class="headers-body text-right">
+              <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
+              <h5 class="text-muted fs-8"><span>دو ساعت پیش در کرج</span> <span>مشکین دشت</span> <span>مهارت فنی و
+                  خدمات</span></h5>
 
-                    <div class="category-about-product mt-4 w-100">
-                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">مصالح ساختمای</a>
-                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">خانه و سلامت</a>
-                      <a href="#" class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded ">موتور و خودرو</a>
-                    </div>
-
+              <div class="d-flex justify-content-between align-items-center my-4">
+                <div class="w-auto ">
+                  <a href="" class="btn btn-brand btn-cs px-3 text-white text-brand-hover">اطلاعات تماس</a>
+                  <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
                 </div>
-            </div>
+                <div class="w-auto pe-2">
+                  <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
+                  <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
+                </div>
+              </div>
+              <div class="customer-info fs-info">
+                <div class="d-flex justify-content-between border-bottom  p-2">
+                  <span class="text-muted">وضعیت</span>
+                  <span>نو</span>
+                </div>
+                <div class="d-flex justify-content-between border-bottom  p-2">
+                  <span class="text-muted">قیمت</span>
+                  <span>3760000 تومان</span>
+                </div>
+                <div class="d-flex justify-content-between border-bottom  p-2">
+                  <span class="text-muted">آخرین به‌روزرسانی آگهی</span>
+                  <span>یه ربع پیش</span>
+                </div>
+              </div>
+              <div class="customer-caption mt-4">
+                <span class="h5"> توضیحات</span>
+                <br>
+                <p class="customer-info-product fs-8 pt-3  border-bottom pb-5">
+                  قیمت پایین نشانه کیفیت بالا نیست،به قیمت خرید کنید پخش درب ضد سرقت ساخت با ابعاد سفارشی رنگ و طرح
+                  سفارشی
+                  درب ورودی فلزی
+                  درب چوبی
+                  رویه فلز ایرانی
+                  رویه فلز ترک
+                  رویه راش و گردو و بلوط ...
+                  جهت اطلاعات بیشتر با کارشناسان فروش تماس بگیرید
+                  ارسال به سراسر کشور
+                  آدرس کارخانه و انبار مرکزی
+                  کرج جاده قزلحصار بعد از کوچه میثم ۳/۲نرسیده به نمایندگی ایرانخودرو درب ضد سرقت آرکا
+                </p>
+              </div>
+
+              <div class="category-about-product mt-4 w-100">
+                <a href="#"
+                  class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded text-muted-hover-light">مصالح
+                  ساختمای</a>
+                <a href="#"
+                  class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded text-muted-hover-light">خانه
+                  و سلامت</a>
+                <a href="#"
+                  class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded text-muted-hover-light">موتور
+                  و خودرو</a>
+              </div>
 
             </div>
+          </div>
+
         </div>
+      </div>
     </div>
- </div>
+  </div>
 
 
 
