--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -140,8 +140,24 @@
     </div>
 
     <div class="row mt-3">
-      <div class="col-8">lorem 8</div>
-      <div class="col-4" dir="rtl">
+      <div class="col-lg-8 col-md-12  ">
+        <div class="carousel bg-danger" id="carousel-cs">
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.jpg?x-img=v1/resize,min_200" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.1.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.2.jpg" alt="">
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-12 " dir="rtl">
         <div>
 
           <div class="container-cs  d-flex flex-direction-column mt-4">
