--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -130,7 +130,8 @@
 
 
   <div class="container mt-5 pt-3 px-3">
-    <div class="bredcrumb-container " dir="rtl">
+    <!-- breadcrumb -->
+    <div class="bredcrumb-container slide " data-bs-ride="carousel" data-ride="carousel" dir="rtl">
       <ol class="breadcrumb  rounded px-1 fs-8">
         <li class="breadcrumb-item">خانه</li>
         <li class="breadcrumb-item">مشتری</li>
@@ -138,6 +139,7 @@
         <li class="breadcrumb-item active">تایتل پیج اینجا</li>
       </ol>
     </div>
+    <!-- breadcrumb -->
 
     <div class="row mt-3">
       <div class="col-lg-8 col-md-12  ">
@@ -159,7 +161,6 @@
       </div>
       <div class="col-lg-4 col-md-12 " dir="rtl">
         <div>
-
           <div class="container-cs  d-flex flex-direction-column mt-4">
             <div class="headers-body text-right">
               <h1 class="fs-10 mb-4">نشت یابی رفع نم لوله بازکنی کشی فنرزنی نشتی فنرزن</h1>
@@ -208,7 +209,7 @@
                 </p>
               </div>
 
-              <div class="category-about-product mt-4 w-100">
+              <div class="category-about-product mt-4 w-100 mb-3">
                 <a href="#"
                   class="category text-decoration-none text-muted fs-8 px-2 py-1 overflow-hidden bg-light rounded text-muted-hover-light">مصالح
                   ساختمای</a>
