--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -131,7 +131,7 @@
 
   <div class="container mt-5 pt-3 px-3">
     <!-- breadcrumb -->
-    <div class="bredcrumb-container slide " data-bs-ride="carousel" data-ride="carousel" dir="rtl">
+    <div class="breadcrumb-container  " dir="rtl">
       <ol class="breadcrumb  rounded px-1 fs-8">
         <li class="breadcrumb-item">خانه</li>
         <li class="breadcrumb-item">مشتری</li>
@@ -143,17 +143,17 @@
 
     <div class="row mt-3">
       <div class="col-lg-8 col-md-12  ">
-        <div class="carousel bg-danger" id="carousel-cs">
+        <div class="carousel bg-danger slide" data-bs-ride="carousel" data-ride="carousel"  id="carousel-cs">
           <div class="carousel-inner">
 
             <div class="carousel-item active">
-              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.jpg?x-img=v1/resize,min_200" alt="">
+              <img class="d-block carousel-img img-md-fluid" src="./images/slide1.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.1.jpg" alt="">
+              <img class="d-block carousel-img img-md-fluid" src="./images/slide2.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img class="d-block carousel-img" src="https://s101.divarcdn.com/static/pictures/1662641104/wYZE-tpE.2.jpg" alt="">
+              <img class="d-block carousel-img img-md-fluid" src="./images/slide3.jpg" alt="">
             </div>
 
           </div>
