--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -250,8 +250,10 @@
       <aside class="col-12 mini-sidebar position-fixed bottom-0 start-0 border-top">
         <div class="d-flex align-items-center justify-content-between">
             <a class="text-color-brand p-3 fs-10" href="#">دیوار آگهی‌ها</a>
-            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover"><i class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
-            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover"><i class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
+            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover"><i class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
+            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover"><i class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
+            <a class="text-color-brand p-3 fs-10" href="#"><i class="bi bi-search"></i>&nbsp;&nbsp;</a>
+            <a class="text-color-brand p-3 fs-10" href="#"><i class="bi bi-search"></i>&nbsp;&nbsp;</a>
         </div>
       </aside>
 
