carousel done again

--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -144,12 +144,17 @@
     <div class="row mt-3">
       <div class="col-lg-8 col-md-12  ">
         <div class="carousel bg-danger slide" data-bs-interval="7000"  data-bs-ride="carousel" id="carousel-cs">
+          <ol class="carousel-indicators">
+            <li data-bs-target="#carousel-cs" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carousel-cs" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carousel-cs" data-bs-slide-to="2"></li>
+          </ol>
           <div class="carousel-inner">
             <!-- control for slider -->
             <a href="#carousel-cs" data-bs-slide="prev" role="button" class="carousel-control-prev">
                 <span class="carousel-control-prev-icon bg-dark"></span>
             </a>
-            <a href="#carousel-cs "  data-bs-slide="next" role="button" class="carousel-control-next" >
+            <a href="#carousel-cs"  data-bs-slide="next" role="button" class="carousel-control-next" >
               <span class="carousel-control-next-icon bg-dark"></span>
             </a>
             <!-- control for slider -->
