Added responsive sidebar

--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -225,11 +225,11 @@
             <a class="col-md-4 fs-11 px-3 py-2  text-muted text-black-hover" href="#">پشتیبانی</a>
           </div>
         </div>
-        <div class="d-flex flex-row justify-content-center mt-3">
-          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
-          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
-          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
-          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
+        <div class="d-flex flex-row-reverse justify-content-center mt-3">
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
         </div>
         <div class="d-flex flex-row justify-content-center mt-4">
           <a class="w-auto text-center" href="#">
@@ -247,13 +247,13 @@
         </div>
       </aside>
 
-      <aside class="col-12 mini-sidebar position-fixed bottom-0 start-0 border-top">
+      <aside class="d-none col-12 mini-sidebar position-fixed bottom-0 start-0 border-top bg-white">
         <div class="d-flex align-items-center justify-content-between">
-            <a class="text-color-brand p-3 fs-10" href="#">دیوار آگهی‌ها</a>
-            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover"><i class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
-            <button class="bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover"><i class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
-            <a class="text-color-brand p-3 fs-10" href="#"><i class="bi bi-search"></i>&nbsp;&nbsp;</a>
-            <a class="text-color-brand p-3 fs-10" href="#"><i class="bi bi-search"></i>&nbsp;&nbsp;</a>
+            <a class="d-flex align-items-center text-color-brand p-3 fs-10 miniSidebar-button" href="#">دیوار آگهی‌ها</a>
+            <button class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
+            <button class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
+            <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button" href="#"><i class="bi bi-chat-fill"></i>&nbsp;&nbsp;چت</a>
+            <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button" href="#"><i class="bi bi-person-fill"></i>&nbsp;&nbsp;دیوار من</a>
         </div>
       </aside>
 
