--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -143,7 +143,7 @@
 
     <div class="row mt-3">
       <div class="col-lg-8 col-md-12  ">
-        <div class="carousel bg-danger slide" data-bs-interval="7000"  data-bs-ride="carousel" id="carousel-cs">
+        <div class="carousel bg-danger slide" data-bs-interval="7000" data-bs-ride="carousel" id="carousel-cs">
           <ol class="carousel-indicators">
             <li data-bs-target="#carousel-cs" data-bs-slide-to="0" class="active"></li>
             <li data-bs-target="#carousel-cs" data-bs-slide-to="1"></li>
@@ -152,9 +152,9 @@
           <div class="carousel-inner">
             <!-- control for slider -->
             <a href="#carousel-cs" data-bs-slide="prev" role="button" class="carousel-control-prev">
-                <span class="carousel-control-prev-icon bg-dark"></span>
+              <span class="carousel-control-prev-icon bg-dark"></span>
             </a>
-            <a href="#carousel-cs"  data-bs-slide="next" role="button" class="carousel-control-next" >
+            <a href="#carousel-cs" data-bs-slide="next" role="button" class="carousel-control-next">
               <span class="carousel-control-next-icon bg-dark"></span>
             </a>
             <!-- control for slider -->
@@ -174,6 +174,37 @@
               <img class="d-block carousel-img img-md-fluid" src="./images/slide3.jpg" alt="">
             </div>
 
+          </div>
+        </div>
+
+        <div class="mt-2 d-none d-lg-block">
+          <form action="" class="">
+            <textarea dir="rtl"
+            class="text-right p-2 focus-brand-color text-start textarea-notes" 
+            placeholder="یاداشت شما .. "
+            style="width: 100%;resize: none;" 
+            name="" id=""
+            cols="100%"
+            rows="5"></textarea>
+          </form>
+          <div class="text-start" dir="rtl">
+            <span class="text-muted fs-20 " >
+              یادداشت تنها برای شما قابل دیدن است و پس از حذف آگهی، پاک خواهد شد.
+            </span>
+          </div>
+          <div dir="rtl"  class="mt-4 fs-21">
+            <a href="" class="text-decoration-none text-muted fs-11">
+              <div class=" border-bottom py-3">
+                <i class="bi bi-question-circle"></i>
+                <span>راهنمای خرید امن</span>
+              </div>
+            </a>
+            <a href="" class="text-decoration-none text-muted fs-11 ">
+              <div class=" border-bottom py-3">
+                <i class="bi bi-exclamation-circle"></i>
+                <span>ثبت تخلف یا مشکل آکهی</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -244,6 +275,27 @@
 
         </div>
       </div>
+    </div>
+
+    <div class=" w-100 h-100 mt-4 p-3 d-flex justify-content-between align-items-center">
+        <div class=" d-flex justify-content-center align-center"
+            >
+              <a class="m-3 text-muted hover-black" href=""
+                ><i class="bi bi-twitter"></i>
+              </a>
+              <a class="m-3 text-muted hover-black" href=""
+                ><i class="bi bi-instagram"></i>
+              </a>
+              <a class="m-3 text-muted hover-black" href=""
+                ><i class="bi bi-linkedin"></i>
+              </a>
+              <a class="m-3 text-muted hover-black" href=""><i class="bi bi-github"></i></a>
+        </div>
+        <div class="text-muted fs-7">
+              <span class="px-2 border-end " >درباره دیوار</span>
+              <span class="px-2 border-end" >پشتیبانی و قوانین</span>
+              <span class="px-2 " >بلاگ دیوار</span>
+        </div>
     </div>
   </div>
 
