--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -49,19 +49,11 @@
               </a>
             </li>
             <!-- drop down menu -->
-            <li class="rounded nav-item mx-2 dropdown">
-              <a href="" data-bs-toggle="dropdown" class="text-muted fs-8 nav-link dropdown-toggle">
+            <li class="rounded nav-item mx-2 ">
+              <a href="" class="text-muted fs-8 nav-link dropdown-toggle">
                 دسته ها
               </a>
-              <div class="dropdown-menu">
-                <ul>
-                  <li>موتور</li>
-                  <li>ماشین</li>
-                  <li>الکترونیک</li>
-                  <li>لوازم خودرو</li>
-                  <li>سایر</li>
-                </ul>
-              </div>
+
             </li>
             <!-- drop down menu -->
 
